{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 126,
  "lineage": "0414f9e4-5da1-c76a-25e5-652147bfadcb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mysqlOS",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e113431ab80e4b75",
            "arn": "arn:aws:ec2:us-east-1:049048201435:instance/i-0f95587e77ca37484",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f95587e77ca37484",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "openstack-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05b91499cbb5dc85c",
            "private_dns": "ip-192-168-1-216.ec2.internal",
            "private_ip": "192.168.1.216",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-068a90334c7e4064f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0797ac8227ce3fe49"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c355f915767d9335",
            "tags": {
              "Name": "mysqlOS"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0797ac8227ce3fe49"
            ]
          },
          "dependencies": [
            "aws_security_group.SG1",
            "aws_security_group.mysqlSG",
            "aws_subnet.subnet_b",
            "aws_vpc.wordpress_mysql_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wordpressOS",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08f3d892de259504d",
            "arn": "arn:aws:ec2:us-east-1:049048201435:instance/i-049ef26ff65e03aaa",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-049ef26ff65e03aaa",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "openstack-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0fb6a9cc14dccb5d7",
            "private_dns": "ip-192-168-0-228.ec2.internal",
            "private_ip": "192.168.0.228",
            "public_dns": "ec2-3-92-71-254.compute-1.amazonaws.com",
            "public_ip": "3.92.71.254",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0d385e14a75b5c723",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-082a4ea3e9d449cca"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-052059ebdd54e4d4f",
            "tags": {
              "Name": "wordpressOS"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-082a4ea3e9d449cca"
            ]
          },
          "dependencies": [
            "aws_instance.mysqlOS",
            "aws_security_group.SG1",
            "aws_security_group.mysqlSG",
            "aws_subnet.subnet_a",
            "aws_subnet.subnet_b",
            "aws_vpc.wordpress_mysql_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049048201435:internet-gateway/igw-00ff232b95b64415b",
            "id": "igw-00ff232b95b64415b",
            "owner_id": "049048201435",
            "tags": {
              "Name": "igw"
            },
            "vpc_id": "vpc-0cadf0e54c4cc77c5"
          },
          "dependencies": [
            "aws_vpc.wordpress_mysql_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "for_subnet_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b48fe93e3961fa1b",
            "owner_id": "049048201435",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00ff232b95b64415b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route1"
            },
            "vpc_id": "vpc-0cadf0e54c4cc77c5"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.wordpress_mysql_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "to_subnet_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03d61ef009a0aeb41",
            "route_table_id": "rtb-0b48fe93e3961fa1b",
            "subnet_id": "subnet-052059ebdd54e4d4f"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.for_subnet_a",
            "aws_subnet.subnet_a",
            "aws_vpc.wordpress_mysql_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049048201435:security-group/sg-082a4ea3e9d449cca",
            "description": "Allow SSH and HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-082a4ea3e9d449cca",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "SG1",
            "name_prefix": null,
            "owner_id": "049048201435",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cadf0e54c4cc77c5"
          },
          "dependencies": [
            "aws_vpc.wordpress_mysql_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysqlSG",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049048201435:security-group/sg-0797ac8227ce3fe49",
            "description": "Allow wordpress inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0797ac8227ce3fe49",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MYSQL",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-082a4ea3e9d449cca"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-082a4ea3e9d449cca"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "mysqlSG",
            "name_prefix": null,
            "owner_id": "049048201435",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mysqlSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cadf0e54c4cc77c5"
          },
          "dependencies": [
            "aws_security_group.SG1",
            "aws_vpc.wordpress_mysql_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049048201435:subnet/subnet-052059ebdd54e4d4f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.0.0/24",
            "id": "subnet-052059ebdd54e4d4f",
            "map_public_ip_on_launch": true,
            "owner_id": "049048201435",
            "tags": {
              "Name": "subnet-a"
            },
            "vpc_id": "vpc-0cadf0e54c4cc77c5"
          },
          "dependencies": [
            "aws_vpc.wordpress_mysql_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049048201435:subnet/subnet-0c355f915767d9335",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-0c355f915767d9335",
            "map_public_ip_on_launch": false,
            "owner_id": "049048201435",
            "tags": {
              "Name": "subnet-b"
            },
            "vpc_id": "vpc-0cadf0e54c4cc77c5"
          },
          "dependencies": [
            "aws_vpc.wordpress_mysql_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "wordpress_mysql_VPC",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049048201435:vpc/vpc-0cadf0e54c4cc77c5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-03a08b348c3677e18",
            "default_route_table_id": "rtb-097a3007f6b4ad5cb",
            "default_security_group_id": "sg-0cd678da7ba8c0479",
            "dhcp_options_id": "dopt-2e9a1454",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0cadf0e54c4cc77c5",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-097a3007f6b4ad5cb",
            "owner_id": "049048201435",
            "tags": {
              "Name": "wordpress_mysql_VPC"
            }
          }
        }
      ]
    }
  ]
}